# Algorithms-Ntua

./: CMakeLists.txt  README.md
Graptes/Ask3/: Algo_Ask3.md
Graptes/ask1/: Algo_Ask1.md
Graptes/ask2/: Algo_Ask2.md
Graptes/ask3/: Algo_Ask3.md
Graptes/ask4/: Algo_Ask4.md
Programmatistikes/ask1/Particles/: droukalis.cpp  particles_v1.cpp
Programmatistikes/ask1/Particles/Input/: test_file.txt
Programmatistikes/ask1/Particles/Output/: output1.txt  output2.txt
Programmatistikes/ask1/Poleodomia/: poleodomia.cpp  poleodomia_faster.cpp  test.txt
Programmatistikes/ask1/Poleodomia/Input/: test.txt
Programmatistikes/ask1/Poleodomia/Test Files/: read.c
Programmatistikes/ask2/Credits/: credits.cpp
Programmatistikes/ask2/Credits/Input/: test.txt
Programmatistikes/ask2/Creosote/: algos2ex1.cpp  creosote.cpp  creosote_v2.cpp
Programmatistikes/ask2/Creosote/Input/: input22.txt  input23.txt  input24.txt
Programmatistikes/ask2/Creosote/Output/: output21.txt  output22.txt  output23.txt  output24.txt
Programmatistikes/ask3/robbery/: rob.c  robbery.cpp
Programmatistikes/ask3/roberry/: roberry.cpp
Programmatistikes/ask3/submarine/: submarine.cpp
Programmatistikes/ask3/submarine/Input/: input3.txt  test1.txt  test2.txt
Programmatistikes/ask3/submarine/Output/: output10.txt
Programmatistikes/ask4/driveme/Input/: input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input3.txt  (+6 more)
(+26 files in other folders)
